--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="big">
         <p id="p">
-            Hello! XYZ
+            Hello! Suhani
             <br><br>
             Actually I Want to say YOU that
         </p>
